--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-build": "cd workspaces/react-app; yarn build",
     "compile": "cd workspaces/ctf-eth; yarn compile",
     "deploy": "cd workspaces/ctf-eth; yarn deploy",
-    "evm": "cd workspaces/ctf-eth; yarn evm"
+    "evm": "cd workspaces/ctf-eth; yarn evm-with-gsn"
   },
   "workspaces": [
     "workspaces/*"
