--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "yarn compile && yarn react-start",
+    "start": "yarn react-start",
     "build": "yarn compile && yarn react-build",
     "react-start": "cd workspaces/react-app; yarn start",
     "react-build": "cd workspaces/react-app; yarn build",
     "compile": "cd workspaces/ctf-eth; yarn compile",
     "deploy": "cd workspaces/ctf-eth; yarn deploy",
-    "evm": "cd workspaces/ctf-eth; yarn evm-with-gsn"
+    "evm": "cd workspaces/ctf-eth; yarn evm-with-gsn",
+    "clean": "cd workspaces/ctf-eth; yarn clean; cd ../react-app; yarn clean"
   },
   "workspaces": [
     "workspaces/*"
