--- a/workspaces/react-app/package.json
+++ b/workspaces/react-app/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rm -rf build"
   },
   "eslintConfig": {
     "extends": "react-app"
